[BUG FIX] fix table dropdown visibility (#2550)

--- a/assets/styles/authoring/model-editors.scss
+++ b/assets/styles/authoring/model-editors.scss
@@ -1,5 +1,5 @@
-@import "authoring/variables";
-@import "bootstrap";
+@import 'authoring/variables';
+@import 'bootstrap';
 
 .editors .structured-content,
 .rich-text-editor {
@@ -14,10 +14,10 @@
       position: relative;
       margin-bottom: 0;
       word-wrap: break-word;
-      overflow: hidden;
+      overflow: visible;
 
       .table-dropdown {
-        z-index: 1;
+        z-index: 1000;
         position: absolute;
         top: 5px;
         right: 8px;
